Fix text colour contrast

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,4 +1,5 @@
 .mainProfile {
+    color: black;
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -38,6 +39,7 @@
 }
 
 .reviewContainer {
+    color: black;
     background-color: lightgray;
     border-radius: 25px;
     height: 15em;
@@ -65,6 +67,7 @@
 }
 
 .settings {
+    color: black;
     background-color: lightgray;
     border-radius: 25px;
     height: 4em;
